fix powermock issue