@@ -366,6 +366,11 @@ tasks.register('printVersion') {
     }
 }
 
+test {
+    jvmArgs += ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
+    jvmArgs += ['--add-opens', 'java.base/java.util=ALL-UNNAMED']
+}
+
 pitest {
     targetClasses = ['uk.gov.hmcts.reform.divorce.documentgenerator.*']
     excludedClasses = ['uk.gov.hmcts.reform.divorce.documentgenerator.config.*',
